RESOLVED FIXED228857
[Win][WebKitTestRunner] WTR::PlatformWebView leaks m_view (WKViewRef)
https://bugs.webkit.org/show_bug.cgi?id=228857
Summary [Win][WebKitTestRunner] WTR::PlatformWebView leaks m_view (WKViewRef)
Fujii Hironori
Reported 2021-08-05 20:51:13 PDT
[Win][WebKitTestRunner] WTR::PlatformWebView leaks m_view (WKViewRef) This ends up to a lot of object leaks because WKViewRef is WebKit::WebView that retains WebKit::WebPageProxy.
Attachments
Patch (1.35 KB, patch)
2021-08-05 21:10 PDT, Fujii Hironori
don.olmstead: review+
ews-feeder: commit-queue-
Fujii Hironori
Comment 1 2021-08-05 21:10:43 PDT
Fujii Hironori
Comment 2 2021-08-06 13:24:46 PDT
Radar WebKit Bug Importer
Comment 3 2021-08-06 13:25:22 PDT
Note You need to log in before you can comment on or make changes to this bug.