[Win][WebKitTestRunner] WTR::PlatformWebView leaks m_view (WKViewRef) https://bugs.webkit.org/show_bug.cgi?id=228857

Reviewed by Don Olmstead.

Windows WebKitTestRunner leaked a lot of object because it leaked
WebKit::WebView that retains WebKit::WebPageProxy.

* WebKitTestRunner/win/PlatformWebViewWin.cpp:
(WTR::PlatformWebView::~PlatformWebView): Release m_view.

Canonical link: https://commits.webkit.org/240321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280734 268f45cc-cd09-0410-ab3c-d52691b4dbfc